Connect with vagrant machine. Import DAL stuff from previous project.

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,8 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+# VisualStudio 2015
+SiteTTCErembodegem/src/SiteTTCErembodegem/wwwroot/lib/
+
+# TTC stuff
