--- a/SiteTTCErembodegem/src/Ttc.DataAccess/Ttc.DataAccess.csproj
+++ b/SiteTTCErembodegem/src/Ttc.DataAccess/Ttc.DataAccess.csproj
@@ -65,6 +65,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Ttc.Model\Ttc.Model.csproj">
+      <Project>{321dcbad-1302-400f-8532-74209420b126}</Project>
+      <Name>Ttc.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
