read GetClubTeams = reeks from frenoy

--- a/SiteTTCErembodegem/src/Ttc.DataAccess/Ttc.DataAccess.csproj
+++ b/SiteTTCErembodegem/src/Ttc.DataAccess/Ttc.DataAccess.csproj
@@ -57,6 +57,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201509102130158_Initial.cs" />
+    <Compile Include="Migrations\201509102130158_Initial.Designer.cs">
+      <DependentUpon>201509102130158_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="TtcDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,6 +75,11 @@
       <Project>{321dcbad-1302-400f-8532-74209420b126}</Project>
       <Name>Ttc.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201509102130158_Initial.resx">
+      <DependentUpon>201509102130158_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
