--- a/SiteTTCErembodegem/src/FrenoySyncer/App.config
+++ b/SiteTTCErembodegem/src/FrenoySyncer/App.config
@@ -26,4 +26,16 @@
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="TabTAPI_Binding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://api.vttl.be/0.7/index.php?s=vttl" binding="basicHttpBinding"
+        bindingConfiguration="TabTAPI_Binding" contract="FrenoyVttl.TabTAPI_PortType"
+        name="TabTAPI_Port" />
+    </client>
+  </system.serviceModel>
 </configuration>
