--- a/SiteTTCErembodegem/src/FrenoySyncer/FrenoySyncer.csproj
+++ b/SiteTTCErembodegem/src/FrenoySyncer/FrenoySyncer.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrenoySync.cs" />
+    <Compile Include="FrenoySyncOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\FrenoyVttl\Reference.cs">
