--- a/SiteTTCErembodegem/src/FrenoySyncer/App.config
+++ b/SiteTTCErembodegem/src/FrenoySyncer/App.config
@@ -33,9 +33,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://api.vttl.be/0.7/index.php?s=vttl" binding="basicHttpBinding"
-        bindingConfiguration="TabTAPI_Binding" contract="FrenoyVttl.TabTAPI_PortType"
-        name="TabTAPI_Port" />
+      <endpoint address="http://tafeltennis.sporcrea.be/api/index.php?s="
+        binding="basicHttpBinding" bindingConfiguration="TabTAPI_Binding"
+        contract="FrenoyVttl.TabTAPI_PortType" name="TabTAPI_Port" />
     </client>
   </system.serviceModel>
 </configuration>
