--- a/SiteTTCErembodegem/src/FrenoySyncer/FrenoySyncer.csproj
+++ b/SiteTTCErembodegem/src/FrenoySyncer/FrenoySyncer.csproj
@@ -93,12 +93,6 @@
     <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetDivisionRankingResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetDivisionsResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetDivisionsResponse1.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetMatchesResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -117,12 +111,6 @@
     <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetSeasonsResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetTournamentsResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.GetTournamentsResponse1.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.TestResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -135,7 +123,6 @@
     <None Include="Service References\FrenoyVttl\FrenoySyncer.FrenoyVttl.UploadResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\FrenoyVttl\item.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Ttc.Model\Ttc.Model.csproj">
@@ -160,6 +147,7 @@
     <None Include="Service References\FrenoyVttl\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Service References\FrenoyVttl\item11.wsdl" />
     <None Include="Service References\FrenoyVttl\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
