Also import GetMatches.MatchDetails

--- a/src/FrenoySyncer/App.config
+++ b/src/FrenoySyncer/App.config
@@ -29,7 +29,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="TabTAPI_Binding" />
+        <binding name="TabTAPI_Binding" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
